--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ body {
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  /* border: 3px solid #000; */
+  /* border: 3px solid #fff; */
 }
 
 .text-container {
